2006-09-21  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_connect_cb):
	* loudmouth/lm-proxy.c: (_lm_proxy_connect_cb):
	- Initiatilize len, patch from Richard Hult.
	- Fixes LM-58.

2006-09-19  Richard Hult  <richard@imendio.com>

	* loudmouth/lm-connection.c (connection_connect_cb): 
	* loudmouth/lm-proxy.c (_lm_proxy_connect_cb): Initialize len,
	fixes some random bugs on connection errors, where the error code
	returned is random numbers.

2006-09-13  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_free):
	- Unref the proxy if set, plugs a leak.
	- Fixes LM-51.

2006-09-11  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-utils.c: (_lm_utils_generate_id):
	- Generate more unique IDs, fixes LM-56.

2006-09-11  Mikael Hallendal  <micke@imendio.com>

	* Release 1.1.3

2006-09-11  Mikael Hallendal  <micke@imendio.com>

	* configure.ac:
	* NEWS:
	- Updated for 1.1.3

2006-09-10  Mikael Hallendal  <micke@imendio.com>

	* configure.ac:
	* loudmouth/Makefile.am:
	* tests/Makefile.am:
	* tests/parser-tests/*:
	* tests/test-parser.c: 
	- Some more work on unit tests for the parser.

2006-09-08  Mikael Hallendal  <micke@imendio.com>

	* tests/Makefile.am:
	* tests/test-parser.c:
	- Added, base for parser unit tests.

2006-09-06  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-ssl-openssl.c: (ssl_verify_certificate):
	- Implemented.

2006-09-01  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (lm_connection_new_with_context),
	(lm_connection_send_raw):
	* loudmouth/lm-message-handler.c: (lm_message_handler_new),
	(lm_message_handler_is_valid):
	* loudmouth/lm-message-node.c: (lm_message_node_add_child),
	(lm_message_node_set_attribute), (lm_message_node_get_attribute),
	(lm_message_node_get_child), (lm_message_node_find_child):
	* loudmouth/lm-parser.c:
	* loudmouth/lm-utils.c: (_lm_utils_hostname_to_punycode),
	(lm_utils_get_localtime):